<resources>
    <string name="app_name">TestApplication</string>
    <string name="title_search">Search</string>
    <string name="title_rental">Rentals</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtLooking">Looking For?</string>
    <string name="paypal_button">Pay with PayPal</string>
    <string name="txtRecommended">Recommended For You</string>
    <string name="txtPopular">Popular Items</string>
    <string name="txtOn">Toronto, ON</string>
    <string name="txtDate">Dates</string>
    <string name="title_picture">Upload Product</string>
    <string name="title_activity_payment">Payment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
