<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_rentals"
        android:icon="@drawable/ic_rental"
        android:title="@string/title_rental" />

    <item
        android:id="@+id/navigation_picture"
        android:icon="@drawable/ic_insert_photo"
        android:title="@string/title_picture" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>